fixed location of scrollbar in iframe

--- a/holy-grail.css
+++ b/holy-grail.css
@@ -32,7 +32,6 @@ iframe {
   background-color: var(--tertiary-color);
   border: none;
   overflow: auto;
-  padding: 20px;
   flex-grow: 1;
 }
 
