--- a/iframe.css
+++ b/iframe.css
@@ -2,4 +2,5 @@ body {
   color: white;
   font-family: sans-serif;
   font-size: 1.5rem;
+  padding: 1rem;
 }
